# STR2022-Tracker

./: .cproject  .project  CMakeLists.txt  README.md  sdkconfig
components/MQTTPackage/: CMakeLists.txt  MQTTPackage.c
main/: CMakeLists.txt  MQTTClient.c  MQTTConnectClient.c  MQTTFreeRTOS.c  MQTTFreeRTOS.h  sim7000.c  sim7000.h  sim800.c  sim800.h  sim_core.c  sim_core.h  simple_timer.c  simple_timer.h  slip.c  slip.h  ssp.c  ssp.h  utils.c  utils.h  widecontrol_v2_main.c
