idf_component_register(SRCS 
			"MQTTPackage.c"		
			"MQTTConnectServer.c"
			"MQTTConnectClient.c"
			"MQTTDeserializePublish.c"
			"MQTTFormat.c"
			"MQTTPacket.c"
			"MQTTSerializePublish.c"
			"MQTTSubscribeClient.c"
			"MQTTUnsubscribeClient.c"
			"MQTTUnsubscribeServer.c"
	        INCLUDE_DIRS "include")

